change image path

--- a/main.html
+++ b/main.html
@@ -87,7 +87,7 @@
             id="add-money-box"
             class="flex flex-col items-center border p-6 rounded-xl cursor-pointer"
           >
-            <img src="/assets/wallet1.png" />
+            <img src="./assets/wallet1.png" />
             <h3>Add Money</h3>
           </div>
 
@@ -97,7 +97,7 @@
             id="cash-out-box"
             class="flex flex-col items-center border p-6 rounded-xl cursor-pointer"
           >
-            <img src="/assets/send1.png" />
+            <img src="./assets/send1.png" />
             <h3>Cash Out</h3>
           </div>
 
@@ -107,7 +107,7 @@
             id="transfer-money-box"
             class="flex flex-col items-center justify-center border p-2 rounded-xl cursor-pointer"
           >
-            <img src="/assets/money1.png" />
+            <img src="./assets/money1.png" />
             <h3>Transfer Money</h3>
           </div>
 
@@ -117,7 +117,7 @@
             id="get-bonus-box"
             class="flex flex-col items-center border p-6 rounded-xl cursor-pointer"
           >
-            <img src="/assets/bonus1.png" />
+            <img src="./assets/bonus1.png" />
             <h3>Get Bonus</h3>
           </div>
 
@@ -127,7 +127,7 @@
             id="pay-bill-box"
             class="flex flex-col items-center border p-6 rounded-xl cursor-pointer"
           >
-            <img src="/assets/purse1.png" />
+            <img src="./assets/purse1.png" />
             <h3>Pay Bill</h3>
           </div>
 
@@ -137,7 +137,7 @@
             id="transaction-box"
             class="flex flex-col items-center border p-6 rounded-xl cursor-pointer"
           >
-            <img src="/assets/transaction1.png" />
+            <img src="./assets/transaction1.png" />
             <h3>Transactions</h3>
           </div>
         </section>
