modify transaction history section style.

--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
     </style>
   </head>
   <body class="bg-slate-800 outfit-font">
-    <section class="bg-slate-200 max-w-md min-h-screen mx-auto ">
+    <section class="bg-slate-200 max-w-md min-h-screen mx-auto">
       <header class="shadow py-2 mb-8 bg-white">
         <nav class="flex items-center justify-between px-2">
           <div class="flex items-center justify-center">
@@ -52,7 +52,9 @@
             </div>
           </div>
 
-          <button class="btn rounded-sm text-stone-500 font-bold hover:bg-gray-400 hover:text-white">
+          <button
+            class="btn rounded-sm text-stone-500 font-bold hover:bg-gray-400 hover:text-white"
+          >
             <svg
               class="w-4 rotate-180 text-stone-500"
               xmlns="http://www.w3.org/2000/svg"
@@ -413,10 +415,7 @@
           <!--Transaction History content -->
 
           <div>
-            <div
-              id="transaction-container"
-              class="hero-content flex-col lg:flex-row-reverse"
-            ></div>
+            <div id="transaction-container" class="hero-content flex-col"></div>
           </div>
         </section>
       </main>
